Fix focus styles of dropdown danger link

--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -313,6 +313,7 @@
 
     &:focus {
       @include pulsar-dropdown-item-focused;
+      background-color: color(background, focus) !important;
       color: color(black) !important;
     }
 
