Stop form groups breaking layout when used in a horizontal table form
Closes XFP-4239

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -283,8 +283,8 @@ td.row__actions {
     td {
         white-space: nowrap;
 
-        // Maintain expected behaviour of flush inputs
-        .form__group--flush {
+        // Maintain expected behaviour of form groups
+        .form__group {
             white-space: normal;
         }
     }
