Make sure span labels display as expected with form__group—top
Closes #1327

--- a/stylesheets/_structure.forms.scss
+++ b/stylesheets/_structure.forms.scss
@@ -93,7 +93,8 @@
 // }
 
 .form__group--top {
-    > .control__label {
+    > .control__label,
+    > span.control__label {
         @include col-span(12);
     }
 
