--- a/views/lexicon/tabs/rich_list.html.twig
+++ b/views/lexicon/tabs/rich_list.html.twig
@@ -147,7 +147,7 @@
 			</ol>
 		</div>
 		<div class="richer-list__detail">
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 
@@ -179,7 +179,7 @@
 			</table>
 		</div>
 		<div class="richer-list__detail">
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 
@@ -207,7 +207,7 @@
 			</table>
 		</div>
 		<div class="richer-list__detail">
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 	<div class="pagination">
@@ -238,7 +238,7 @@
 		</div>
 		<div class="richer-list__detail">
 			<code><pre>&lt;div class="richer-list richer-list--medium"&gt;</pre></code>
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 
@@ -256,7 +256,7 @@
 		</div>
 		<div class="richer-list__detail">
 			<code><pre>&lt;div class="richer-list richer-list--large"&gt;</pre></code>
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 
@@ -274,7 +274,7 @@
 		</div>
 		<div class="richer-list__detail">
 			<code><pre>&lt;div class="richer-list richer-list--xlarge"&gt;</pre></code>
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 
@@ -292,7 +292,7 @@
 		</div>
 		<div class="richer-list__detail">
 			<code><pre>&lt;div class="richer-list richer-list--tall richer-list--large"&gt;</pre></code>
-			{{ lipsum|raw }}
+			{{ lipsum|sanitise|raw }}
 		</div>
 	</div>
 
