--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -139,7 +139,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
             })
         )
     }}>
-        {{- options.label|default|raw -}}
+        {{- options.label|default|sanitise|raw -}}
     </span>
 
 {% endspaceless %}
@@ -310,7 +310,7 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
                 })
             )
         }}>
-            {{- options.label|default|raw -}}
+            {{- options.label|default|sanitise|raw -}}
         </button>
 
     {% else %}
@@ -323,7 +323,7 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
                 })
             )
         }}>
-            {{- options.label|default|striptags('<abbr><b><br><cite><code><dfn><em><i><img><kbd><q><small><span><strong><sub><sup>')|raw -}}
+            {{- options.label|default|sanitise|raw -}}
             {{- util.caret(options.caret|default) -}}
         </button>
 
@@ -523,7 +523,7 @@ data-*     | string | Data attributes, eg: `'data-foo': 'bar'`
             })
         )
     }}>
-        {{- options.label|default|raw -}}
+        {{- options.label|default|sanitise|raw -}}
     </span>
 
 {% endspaceless %}
@@ -560,7 +560,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
 {% spaceless %}
 
     <div{{ attributes(options|exclude('value')) }}>
-        {{- options.value|raw -}}
+        {{- options.value|sanitise|raw -}}
     </div>
 
 {% endspaceless %}
@@ -717,7 +717,7 @@ class  | string | CSS classes, space separated
                 'class': 'icon-' ~ icon_name ~ class|default
             })
         )
-    }}>{{ label|default|raw }}</i>
+    }}>{{ label|default|sanitise|raw }}</i>
 
 {% endspaceless %}
 {% endmacro %}
@@ -770,10 +770,10 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     }}>
         {% if isRemovable %}
             <span class="label__text">
-                {{- options.label|default|raw -}}
+                {{- options.label|default|sanitise|raw -}}
             </span>
         {% else %}
-            {{- options.label|default|raw -}}
+            {{- options.label|default|sanitise|raw -}}
         {% endif %}
 
         {% if isRemovable %}
@@ -827,7 +827,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
             {{- html.icon(options.icon) -}}&nbsp;
         {%- endif -%}
 
-        {{- options.label|default|raw -}}
+        {{- options.label|default|sanitise|raw -}}
     </a>
 {% endmacro %}
 
@@ -990,7 +990,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
     <li{{ attributes(options|exclude('value')) }}>
-        {{- options.value|raw -}}
+        {{- options.value|sanitise|raw -}}
     </li>
 
 {% endspaceless %}
@@ -1124,12 +1124,12 @@ data-*      | string    | Data attributes, eg: `'data-foo': 'bar'`
         <div class="media__body">
         {% if options.action is defined and options.action is not empty %}
             <span class="pull-right">
-                {{ options.action|raw }}
+                {{ options.action|sanitise|raw }}
             </span>
         {% endif %}
-            <p>{{ options.title|raw }}</p>
+            <p>{{ options.title|sanitise|raw }}</p>
         {% if options.description is defined and options.description is not empty %}
-            <span class="small-type">{{ options.description|raw }}</span>
+            <span class="small-type">{{ options.description|sanitise|raw }}</span>
         {% endif %}
         </div>
     </{{ type }}>
@@ -1184,7 +1184,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
     {% for key, value in options.items %}
 
            <dt class="metadata__key">{{ key }}</dt><!--
-        --><dd class="metadata__value">{{ value|raw }}</dd>
+        --><dd class="metadata__value">{{ value|sanitise|raw }}</dd>
 
     {% endfor %}
     </dl>
@@ -1251,11 +1251,11 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
 
         {% if options.title is defined and options.title is not empty %}
         <{{ options.heading_level|default('h2') }} class="panel__title" id="{{ guid }}">
-            {{ options.title|raw }}
+            {{ options.title|sanitise|raw }}
         </{{ options.heading_level|default('h2') }}>
         {% endif %}
         <div class="panel__body"{% if 'panel--scroll' in options.class|default %} tabindex="0"{% endif %}>
-            {{- options.body|raw -}}
+            {{- options.body|sanitise|raw -}}
         </div>
         {% if options.actions is defined %}
             {% if options.actions_placement is defined and options.actions_placement in actions_placements %}
@@ -1267,7 +1267,7 @@ data-*  | string | Data attributes, eg: `'data-foo': 'bar'`
                     {% if action is iterable %}
                         {{- html.button(action) -}}
                     {% else %}
-                        {{- action|raw -}}
+                        {{- action|sanitise|raw -}}
                     {% endif %}
                 {% endfor %}
             </div>
@@ -1327,14 +1327,14 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
         }}>
 
             {% if options.value_visible|default(false) %}
-                {{- options.value|raw ~ '%' }}
+                {{- options.value|sanitise|raw ~ '%' }}
             {% else %}
                 <span class="hide">
                     {{- options.value ~ '%' }}
                 </span>
             {% endif %}
 
-            {{- options.label|default|raw -}}
+            {{- options.label|default|sanitise|raw -}}
         </div>
     </div>
 
@@ -1541,10 +1541,10 @@ data-dropzone-file-node-type        | boolean   | Show file type in file html | 
                 {{  html.icon('cloud-upload', { 'class': 'dropzone__icon dropzone__icon--main' }) }}
             </div>
             <p class="dropzone__label">Drag &amp; Drop</p>
-            <p class="dropzone__info">{{ idle|raw }}</p>
+            <p class="dropzone__info">{{ idle|sanitise|raw }}</p>
             <p class="dropzone__help">
-                {{ options['data-helper-title']|default('Helper title')|raw }}:
-                {{ options['data-helper-content']|default('Helper content')|raw }}
+                {{ options['data-helper-title']|default('Helper title')|sanitise|raw }}:
+                {{ options['data-helper-content']|default('Helper content')|sanitise|raw }}
             </p>
         </div>
     {% endspaceless %}
