--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -55,12 +55,12 @@
     <section class="actionsbar" aria-label="page actions">
         {% if _actions_left is not empty %}
         <div class="float--left">
-            {{ _actions_left|raw }}
+            {{ _actions_left|sanitise|raw }}
         </div>
         {% endif %}
         {% if _actions_right is not empty %}
         <div class="float--right">
-            {{ _actions_right|raw }}
+            {{ _actions_right|sanitise|raw }}
         </div>
         {% endif %}
     </section>
@@ -69,12 +69,12 @@
     <div class="tab__inner">
         {% if _hasHeader == true %}
         <div class="tab__header">
-            {{ _header|raw }}
+            {{ _header|sanitise|raw }}
         </div>
         {% endif %}
         {% if _hasSettings == true %}
         <section class="tab__settings" aria-label="settings">
-            {{ _settings|raw }}
+            {{ _settings|sanitise|raw }}
         </section>
         {% endif %}
         <div class="tab__content" id="skip-target" role="main">
@@ -82,7 +82,7 @@
         </div>
         {% if _hasSidebar == true %}
         <aside class="tab__sidebar" aria-label="additional information">
-            {{ _sidebar|raw }}
+            {{ _sidebar|sanitise|raw }}
         </aside>
         {% endif %}
     </div>
