--- a/views/pulsar/v2/helpers/elem.html.twig
+++ b/views/pulsar/v2/helpers/elem.html.twig
@@ -119,7 +119,7 @@ name    | string | The name of this control
                 'class': 'control__label' ~ labelVisibilityClass|default
             }), {'tag': (tag)}) }}>
 
-            {{- options.label|raw -}}
+            {{- options.label|sanitise|raw -}}
             {%- if options['required-indicator'] is not defined or options['required-indicator'] != false -%}
                 {{ util.required(options.required|default(false)) }}
             {%- endif -%}
@@ -162,7 +162,7 @@ value   | string | Specifies the value of the paragraph
 
     {% if options.value is not empty %}
         <p{{ attributes(options|exclude('value')) }}>
-            {{- options.value|raw -}}
+            {{- options.value|sanitise|raw -}}
         </p>
     {% endif %}
 
