Fix twig macro output tests
* Adds rows and cols attributes to textareas
* Adds lowercase values to boolean attributes

--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -15,7 +15,8 @@
 
     {{ html.button({ 
         label: html.icon('ok') ~ "<script>alert('There’s some holes in this house')</script>",
-        type: 'submit'
+        type: 'submit',
+        'aria-label': 'test'
     }) }}
 
     {{ html.button({ 
