--- a/views/pulsar/v2/helpers/tabs.html.twig
+++ b/views/pulsar/v2/helpers/tabs.html.twig
@@ -115,9 +115,7 @@
             and tab.src|json_encode|slice(1, 4) != 'http'
         -%}
             <div class="tab__pane{% if tab_active is defined and tab_active == tab.id %} is-active{% endif %}{% if (tab.class is defined and tab.class is not null) %} {{ tab.class }}{% endif %}" id="{{ tab.id }}"{% if tab.attr is defined and tab.attr != null %} {{ tab.attr|sanitise|raw }}{% endif %}>
-                {# We don't sanitise here as this would strip any <script> tags or on* attributes, 
-                    which are likely required for page functionality at this point #}
-                {{ tab.src|raw }}
+                {{ tab.src }}
             </div>
         {%- endif -%}
     {%- endfor -%}
